# HaskellDeepLearning

./: .gitignore  HaskellDeepLearning.cabal  stack.yaml
deep-learning-from-scratch/ch03/: neuralnet_mnist.hs  pkl2csv.py  sample_weight_W1.csv  sample_weight_W2.csv  sample_weight_W3.csv
