name:                HaskellDeepLearning
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Torajiro Aida
copyright:           2017 Torajiro Aida
category:            AI
build-type:          Simple
cabal-version:       >=1.10

executable ch03_neuralnet_mnist
  main-is:             deep-learning-from-scratch/ch03/neuralnet_mnist.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       zlib,
                       bytestring,
                       hmatrix,
                       MissingH,
                       parsec,
                       attoparsec
  default-language:    Haskell2010